--- a/ansible/jenkins-master.yaml
+++ b/ansible/jenkins-master.yaml
@@ -3,7 +3,7 @@
   become: true
   tasks:
     - name: add jenkins key
-      apy_key:
+      apt_key:
         url: https://pkg.jenkins.io/debian-stable/jenkins.io-2023.key
         state: present
 
