--- a/ansible/jenkins-slave-setup.yaml
+++ b/ansible/jenkins-slave-setup.yaml
@@ -22,3 +22,13 @@
         src: /opt/apache-maven-3.9.8-bin.tar.gz
         dest: /opt
         remote_src: yes
+
+    - name: install docker
+      apt:
+        name: docker.io
+        state: present
+    
+    - name: start docker service
+      service: 
+        name: docker
+        state: started
